After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729095 - redraw problems when resizing popovers
redraw problems when resizing popovers
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-04-28 10:13 UTC by Matthias Clasen
Modified: 2014-04-28 20:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (164.88 KB, image/png)
2014-04-28 10:13 UTC, Matthias Clasen
  Details
gdkwindow: ignore shape on client-side windows when recomputing visible regions (1.11 KB, patch)
2014-04-28 19:41 UTC, Carlos Garnacho
committed Details | Review

Description Matthias Clasen 2014-04-28 10:13:56 UTC
Created attachment 275307 [details]
screenshot

Shadows are left behind, as can be seen in this screenshot.

testpopover is the testcase.
Comment 1 Carlos Garnacho 2014-04-28 19:41:04 UTC
Created attachment 275374 [details] [review]
gdkwindow: ignore shape on client-side windows when recomputing visible regions

Rendering doesn't do much about clipping drawing operations to the window shape,
although invalidation applies the shape to every window, leaving possibly trails
of "overrendered" content. So ensure the shape portions get invalidated too when
the window is moved/resized.
Comment 2 Carlos Garnacho 2014-04-28 19:47:41 UTC
I'm not too happy about this patch btw... The problem seems to come from the patch from https://bugzilla.gnome.org/show_bug.cgi?id=723556#c6, shadows are overdrawn regardless of the shape applied to that window, however gdk_window_move_resize() doesn't get to invalidate those portions. That seems more accurate with rendering reality though, and shadow trails are gone with it.
Comment 3 Matthias Clasen 2014-04-28 20:02:34 UTC
maybe something to discuss in Berlin
Comment 4 Matthias Clasen 2014-04-28 20:06:54 UTC
Review of attachment 275374 [details] [review]:

In the short term, this patch seems to do the job
Comment 5 Matthias Clasen 2014-04-28 20:07:14 UTC
Review of attachment 275374 [details] [review]:

In the short term, this patch seems to do the job
Comment 6 Carlos Garnacho 2014-04-28 20:50:50 UTC
Committing this so far, I'll be poking for opinions about this in Berlin.

Attachment 275374 [details] pushed as 8e5982c - gdkwindow: ignore shape on client-side windows when recomputing visible regions